# ynd_api_test

./: .~lock.cashe.csv#  README.md  cashe.csv  pyproject.toml  requirements.txt
ynd_api_test/: HELP.md  TASKS.md
ynd_api_test/app/: client.py
ynd_api_test/app/src/: drafts.py
ynd_api_test/app/src/etl_metrics/: extract.py  transform.ipynb  y_metrics.py
ynd_api_test/app/src/inspirations/: campaign_date.py
ynd_api_test/other_approach/: library.py
ynd_api_test/utils/: faker.ipynb  oath_token_getter.py
